<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
  
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/background"
    	android:gravity="center" >

	    <QuickContactBadge
	        android:id="@+id/avatar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="18dp"
	        android:layout_marginTop="30dp" />
	
	    <EditText
	        android:id="@+id/champPrenom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@+id/avatar"
	        android:ems="10"
	        android:hint="@string/prenom"
	        android:inputType="textPersonName" >
	
	        <requestFocus />
	    </EditText>

	    <EditText
	        android:id="@+id/champNom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/champPrenom"
	        android:layout_below="@+id/champPrenom"
	        android:ems="10"
	        android:hint="@string/nom"
	        android:inputType="textPersonName" />
	
	    <Button
	        android:id="@+id/CancelButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginBottom="26dp"
	        android:paddingTop="20dp"
	        android:text="@string/annuler" />
	
	    <EditText
	        android:id="@+id/champMail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/avatar"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/champNom"
	        android:layout_marginTop="31dp"
	        android:ems="10"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress" />
	
	    <EditText
	        android:id="@+id/champDateAnniv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/champNom"
	        android:layout_below="@+id/champMail"
	        android:layout_marginTop="17dp"
	        android:ems="10"
	        android:hint="@string/date"
	        android:inputType="date" />
	
	    <TextView
	        android:id="@+id/textViewBirthday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/champDateAnniv"
	        android:layout_alignBottom="@+id/champDateAnniv"
	        android:layout_alignLeft="@+id/champMail"
	        android:text="@string/birthday" 
	       	android:textColor="#FFFFFF"
	    	android:textSize="15sp"
	    	android:textStyle="bold" />

	    <Button
	        android:id="@+id/OkButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/CancelButton"
	        android:layout_alignParentLeft="true"
	        android:text="@string/validInscription" />

	</RelativeLayout>

</ScrollView>