<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity" >

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:text="@string/inscription" />
	
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:contentDescription="@string/maintitleimg"
        android:src="@drawable/maintitleimage" />

    <Button
        android:id="@+id/ConnectButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/RegisterButton"
        android:layout_alignTop="@+id/RegisterButton"
        android:layout_marginTop="63dp"
        android:text="@string/connexion"
        android:textAlignment="center" />

</RelativeLayout>
