<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <!-- Header  Starts -->

	    <RelativeLayout
	        android:id="@+id/header"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:paddingBottom="5dip"
	        android:paddingTop="5dip" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:contentDescription="@string/maintitleimg"
	            android:src="@drawable/maintitleimage" />
			
	    </RelativeLayout>

	    <!-- Header Ends -->
    
    <TextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/password_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/email_display"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_display"
        android:layout_below="@+id/password_display"
        android:text="Password"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="178dp"
        android:text="Email"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Recuperation donnée inscrite" >

        <requestFocus />
    </EditText>

</RelativeLayout>